--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <nav class="main-nav">
         <ul class="nav-list">
             <li><a href="#" class="nav-link">Головна</a></li>
-            <li><a href="#" class="nav-link">Породи, що вимерли</a></li>
+            <li><a href="survey.html" class="nav-link">Реєстрація вигулу</a></li>
+            <!--<li><a href="#" class="nav-link">Породи, що вимерли</a></li><-->
             <li><a href="#" class="nav-link">Найновіші породи</a></li>
             <li><a href="#" class="nav-link">Доставка собак</a></li>
         </ul>
@@ -25,7 +26,8 @@
     <a class="dropbtn">Меню</a>
     <div class="dropdown-content">
       <a href="#">Головна</a>
-      <a href="#">Породи, що вимерли</a>
+      <a href="survey.html">Реєстрація вигулу</a>
+      <!--<a href="#">Породи, що вимерли</a>-->
       <a href="#">Найновіші породи</a>
       <a href="#">Доставка собак</a>
     </div>
