Link quiz form in navbar

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <ul class="nav-list">
             <li><a href="#" class="nav-link">Головна</a></li>
             <li><a href="survey.html" class="nav-link">Реєстрація вигулу</a></li>
+            <li><a href="quiz.html" class="nav-link">Перевір себе</a></li>
             <!--<li><a href="#" class="nav-link">Породи, що вимерли</a></li><-->
-            <li><a href="#" class="nav-link">Найновіші породи</a></li>
+            <!--li><a href="#" class="nav-link">Найновіші породи</a></li-->
             <li><a href="#" class="nav-link">Доставка собак</a></li>
         </ul>
     </nav>
@@ -27,8 +28,9 @@
     <div class="dropdown-content">
       <a href="#">Головна</a>
       <a href="survey.html">Реєстрація вигулу</a>
+      <a href="quiz.html">Перевір себе</a>
       <!--<a href="#">Породи, що вимерли</a>-->
-      <a href="#">Найновіші породи</a>
+      <!--a href="#">Найновіші породи</a-->
       <a href="#">Доставка собак</a>
     </div>
   </nav>
