Link drawing form in navbar

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <li><a href="#" class="nav-link">Головна</a></li>
             <li><a href="survey.html" class="nav-link">Реєстрація вигулу</a></li>
             <li><a href="quiz.html" class="nav-link">Перевір себе</a></li>
+            <li><a href="drawing.html" class="nav-link">Рисунки</a></li>
             <!--<li><a href="#" class="nav-link">Породи, що вимерли</a></li><-->
             <!--li><a href="#" class="nav-link">Найновіші породи</a></li-->
-            <li><a href="#" class="nav-link">Доставка собак</a></li>
+            <!--li><a href="#" class="nav-link">Доставка собак</a></li-->
         </ul>
     </nav>
   <nav class="mobile-nav" tabindex="1">
@@ -29,9 +30,10 @@
       <a href="#">Головна</a>
       <a href="survey.html">Реєстрація вигулу</a>
       <a href="quiz.html">Перевір себе</a>
+      <a href="drawing.html">Рисунки</a>
       <!--<a href="#">Породи, що вимерли</a>-->
       <!--a href="#">Найновіші породи</a-->
-      <a href="#">Доставка собак</a>
+      <!--a href="#">Доставка собак</a-->
     </div>
   </nav>
 </header>
