--- a/drawing.html
+++ b/drawing.html
@@ -34,13 +34,16 @@
     <text x="25" y="29" font-family="Verdana" font-size="5" fill="#000080" stroke="#000080" stroke-width="0.3">1</text>
 
     <!-- Лапка -->
+
+    <!-- Лівий та правий центральні еліпси -->
     <ellipse cx="70" cy="13" rx="4" ry="7" fill="#000080" stroke="#000080" stroke-width="1.3" />
     <ellipse cx="81" cy="13" rx="4" ry="7" fill="#000080" stroke="#000080" stroke-width="1.3" />
-
+    <!-- Лівий та правий бокові еліпси -->
     <ellipse cx="65" cy="17" rx="3" ry="5" fill="#000080" stroke="#000080" stroke-width="1.3" transform="rotate(-35, 70, 25)" />
     <ellipse cx="86" cy="17" rx="3" ry="5" fill="#000080" stroke="#000080" stroke-width="1.3" transform="rotate(35, 81, 25)" />
-
-    <polyline points="64,35 67,30 70,26 72.75,24.5 75.5,24 78.25,24.5 81,26 84,30 87,35 86,38 85,39 80,37 79,36 78,35 75.5,35 73,35 72,36 71,37 66,39 65,38 64,35 65,34" stroke="#000080" stroke-width="1.3" fill="#000080" />
+    <!-- Подушечка лапки -->
+    <polyline points="64,35 67,30 70,26 72.75,24.5 75.5,24 78.25,24.5 81,26 84,30 87,35 86,38 85,39 80,37 79,36 78,35
+    75.5,35 73,35 72,36 71,37 66,39 65,38 64,35 65,34" stroke="#000080" stroke-width="1.3" fill="#000080" />
 
     </svg>
 </body>
