Link game page in navbar

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <h1>Породи собак</h1>
     <nav class="main-nav">
         <ul class="nav-list">
-            <li><a href="#" class="nav-link">Головна</a></li>
+            <!--li><a href="#" class="nav-link">Головна</a></li-->
             <li><a href="survey.html" class="nav-link">Реєстрація вигулу</a></li>
             <li><a href="quiz.html" class="nav-link">Перевір себе</a></li>
             <li><a href="drawing.html" class="nav-link">Рисунки</a></li>
+            <li><a href="game.html" class="nav-link">Кубогра</a></li>
             <!--<li><a href="#" class="nav-link">Породи, що вимерли</a></li><-->
             <!--li><a href="#" class="nav-link">Найновіші породи</a></li-->
             <!--li><a href="#" class="nav-link">Доставка собак</a></li-->
@@ -27,10 +28,11 @@
     <i class="db2" tabindex="1"></i>
     <a class="dropbtn">Меню</a>
     <div class="dropdown-content">
-      <a href="#">Головна</a>
+      <!--a href="#">Головна</a-->
       <a href="survey.html">Реєстрація вигулу</a>
       <a href="quiz.html">Перевір себе</a>
       <a href="drawing.html">Рисунки</a>
+      <a href="game.html">Кубогра</a>
       <!--<a href="#">Породи, що вимерли</a>-->
       <!--a href="#">Найновіші породи</a-->
       <!--a href="#">Доставка собак</a-->
