--- a/index.html
+++ b/index.html
@@ -5,59 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Найстарші породи собак</title>
     <link rel="stylesheet" href="css/style1.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
-<header class="header">
+<header class="header bg-dark text-white text-center">
     <h1>Породи собак</h1>
     <nav class="main-nav">
-        <ul class="nav-list">
+        <ul class="nav-list justify-content-center">
             <!--li><a href="#" class="nav-link">Головна</a></li-->
-            <li><a href="survey.html" class="nav-link">Реєстрація вигулу</a></li>
-            <li><a href="quiz.html" class="nav-link">Перевір себе</a></li>
-            <li><a href="drawing.html" class="nav-link">Рисунки</a></li>
-            <li><a href="game.html" class="nav-link">Кубогра</a></li>
+            <li class="nav-item"><a href="survey.html" class="nav-link text-white font-weight-bold">Реєстрація вигулу</a></li>
+            <li class="nav-item"><a href="quiz.html" class="nav-link text-white font-weight-bold">Перевір себе</a></li>
+            <li class="nav-item"><a href="drawing.html" class="nav-link text-white font-weight-bold">Рисунки</a></li>
+            <li class="nav-item"><a href="game.html" class="nav-link text-white font-weight-bold">Кубогра</a></li>
             <!--<li><a href="#" class="nav-link">Породи, що вимерли</a></li><-->
             <!--li><a href="#" class="nav-link">Найновіші породи</a></li-->
             <!--li><a href="#" class="nav-link">Доставка собак</a></li-->
         </ul>
     </nav>
-  <nav class="mobile-nav" tabindex="1">
-    <i class="db2" tabindex="1"></i>
-    <a class="dropbtn">Меню</a>
-    <div class="dropdown-content">
-      <!--a href="#">Головна</a-->
-      <a href="survey.html">Реєстрація вигулу</a>
-      <a href="quiz.html">Перевір себе</a>
-      <a href="drawing.html">Рисунки</a>
-      <a href="game.html">Кубогра</a>
-      <!--<a href="#">Породи, що вимерли</a>-->
-      <!--a href="#">Найновіші породи</a-->
-      <!--a href="#">Доставка собак</a-->
-    </div>
+
+  <nav class ="mobile-nav">
+    <ul class="nav justify-content-center">
+      <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Меню</a>
+      <div class="dropdown-menu justify-content-center">
+        <!--a href="#">Головна</a-->
+        <a class="dropdown-item" href="survey.html">Реєстрація вигулу</a>
+        <a class="dropdown-item" href="quiz.html">Перевір себе</a>
+        <a class="dropdown-item" href="drawing.html">Рисунки</a>
+        <a class="dropdown-item" href="game.html">Кубогра</a>
+        <!--<a href="#">Породи, що вимерли</a>-->
+        <!--a href="#">Найновіші породи</a-->
+        <!--a href="#">Доставка собак</a-->
+      </div>
+    </li>
+    </ul>
   </nav>
 </header>
 
 <main>
     <section class="section">
-        <div class="subsection"><h2>Походження</h2>
-            <p>
-                Учені ще досі не прийшли до єдиної думки, хто з існуючих нині диких тварин був прародичем собаки. Найпоширеніша теорія походження собак визнає, що розмаїтий світ наших чотирилапих друзів пішов від <strong>вовків</strong>, яких приручили первісні люди.
+      <div class="subsection">
+          <h2>Походження</h2>
+            <p class="text-dark">
+              Учені ще досі не прийшли до єдиної думки, хто з існуючих нині диких тварин був прародичем собаки. Найпоширеніша теорія походження собак визнає, що розмаїтий світ наших чотирилапих друзів пішов від <strong>вовків</strong>, яких приручили <abbr title="gg">первісні люди.</abbr>
             </p>
-
-            <p>
+            <p class="text-white-50 bg-dark">
                 Цей процес приручення відбувався близько <ins>15 тисяч років тому</ins>, коли люди почали займатися землеробством. Вони вирішили, що <strong>вовки</strong>, які жили поруч з ними, <strong>можуть бути корисними для охорони</strong> від інших хижаків, а також <strong>для полювання</strong>.
-            </p></div>
+            </p>
+            </div>
 
-        <div class="subsection"><h2>Найстарші породи</h2>
+      <div class="subsection">
+        <h2>Цитата про собак зі змістом:</h2>
+          <blockquote class="blockquote">
+            <p>Собака, що гавкає на відстані, не вкусить ніколи. Використай <kbd>ctrl+dog</kbd> аби перевірити.</p>
+            <footer class="blockquote-footer">Джейсон Стейтем</footer>
+          </blockquote>
+          </div>
+
+        <div class="subsection">
+          <h2>Найстарші породи</h2>
             <p>
                 Нещодавно вчені опублікували список з <mark> 8 порід собак</mark>, аналіз ДНК яких засвідчує їхнє <strong>давнє походження</strong>. Ці породи сформувалися одними з перших і зустрічаються на великій території, яка охоплює Близький Схід, Сибір, Аляску, Тибет, Африку. Ось список цих собак, а країни, на території яких вони були виведені, названі з урахуванням сучасної географії:
             </p>
             <!-- Таблиця -->
-            <table class="dog-table" border="1">
-                <thead>
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
                 <tr>
                     <th>Порода</th>
                     <th>Країна</th>
@@ -110,7 +129,7 @@
                 <h3>Алабай</h3>
                 <p>Перша порода, яка майже одразу спадає на думку, і яку чомусь не включили до списку – <strong>алабай</strong>. Ця давня порода була відома вже 2 тис. років тому, а деякі дослідники навіть визначають значно раніше її походження – <ins>майже 4 тис. років</ins>.</p>
               <div class="dog-image-container">
-                <img src="img/alabai.jpg" loading="lazy" alt="Алабай" class="dog-image">
+                <img src="img/alabai.jpg" loading="lazy" alt="Алабай" class="dog-image rounded">
               </div>
             </article>
 
@@ -120,7 +139,7 @@
                     Ще одна порода, яка виведена дуже давно, – <strong>шарпей</strong>. Ці собаки були відомі ще <ins>3 тис. років тому</ins>. Це дуже стара порода, яка виводилася в Китаї.
                 </p>
               <div class="dog-image-container">
-                <img src="img/sharpei.jpg" loading="lazy" alt="Шарпей" class="dog-image">
+                <img src="img/sharpei.jpg" loading="lazy" alt="Шарпей" class="dog-image rounded">
               </div>
             </article>
 
@@ -130,7 +149,7 @@
                     <strong> Самоїд</strong> - одна із найдавніших нині відомих порід їздових собак. Протягом 3000 років самоїд був компаньйоном людей північних племен самоїдів (сьогоднішні їх нащадки — ненці). Самоїд завдяки своїй ізольованості від зовнішнього світу, <strong>уник процесу селекції</strong> та змішання із іншими породами. Порода належить до 5 групи МКФ (шпіци та примітивні).
                 </p>
               <div class="dog-image-container">
-                <img src="img/samoyid.jpg" loading="lazy" alt="Самоїд" class="dog-image">
+                <img src="img/samoyid.jpg" loading="lazy" alt="Самоїд" class="dog-image rounded">
               </div>
             </article></div>
     </section>
@@ -146,9 +165,9 @@
     </div>
 </main>
 
-<footer class="footer">
+<footer class="footer bg-dark text-white text-center py-4 mt-5">
     <p>Зв'язок з нами: <ins>info@dogspecies.edu</ins></p>
-    <div class="contact-form-container">
+    <div class="contact-form-container mb-4 py-2">
       <form class="contact-form">
         <label for="name">Ім'я:</label>
         <input type="text" id="name" name="name">
@@ -156,7 +175,7 @@
         <input type="email" id="email" name="email">
         <label for="message">Повідомлення:</label>
         <textarea id="message" name="message"></textarea>
-        <input id="send" type="submit" value="Надіслати">
+        <button id="send" type="button" class="btn btn-secondary">Надіслати</button>
       </form>
     </div>
 
@@ -171,7 +190,7 @@
         <a href="#"><img loading="lazy" src="img/myspace.png" alt="MySpace"></a>
         <a href="#"><img loading="lazy" src="img/vine.png" alt="Vine"></a>
     </div>
-    <p>&copy; 2024 Освітній проект про породи собак</p>
+    <p class="mt-4">&copy; 2024 Освітній проект про породи собак</p>
 </footer>
 </body>
 </html>
